# novo

./: .gitignore  .project.gf  TODO  create_builds.bat  create_builds.sh  meson.build  shell.nix
modules/: builtin.no  c.no
src/common/: allocator.cpp  allocator.h  defines.h  filesystem.cpp  filesystem.h  hash.cpp  hash.h  logger.cpp  logger.h  nstring.cpp  nstring.h  platform.cpp  platform.h  string_builder.cpp  string_builder.h
src/common/containers/: darray.h  hash_table.h  stack.h
src/common/memory/: allocator.cpp  allocator.h  arena.cpp  arena.h  c_allocator.cpp  c_allocator.h  freelist.cpp  freelist.h  linear_allocator.cpp  linear_allocator.h  temp_allocator.cpp  temp_allocator.h  trace.cpp  trace.h
src/compiler/: ast.cpp  ast.h  ast_print.cpp  ast_print.h  atom.cpp  atom.h  backend.cpp  backend.h  c_backend.cpp  c_backend.h  const_resolver.cpp  const_resolver.h  ffi.cpp  ffi.h  instance.cpp  instance.h  keywords.cpp  keywords.h  lexer.cpp  lexer.h  microsoft_craziness.cpp  microsoft_craziness.h  options.cpp  options.h  parser.cpp  parser.h  resolve.cpp  resolve.h  resolver.cpp  resolver.h  runtime_support.cpp  runtime_support.h  scope.cpp  scope.h  size.cpp  size.h  sizer.cpp  sizer.h  source_pos.cpp  source_pos.h  (+12 more)
src/driver/: command_line_args.cpp  command_line_args.h  main.cpp
src/tests/: meson.build
src/tests/atom/: atoms.cpp  meson.build
src/tests/compiler/: compiler.cpp  meson.build  test_compiler.cpp
src/tests/compiler/tests/: 001_assert_false.no  001_return_immediate_0.no  002_return.no  002_return_immediate_42.no  003_call.no  003_return_immediate_bignum.no  004_call.no  004_structs.no  005_call_2.no  005_if.no  006_struct_basics.no  006_while.no  007_for.no  007_struct_nested.no  008_arithmetic_assignment.no  008_struct_assign.no  009_break_while_for.no  009_struct_arg.no  010_continue_while_for.no  010_struct_return_1.no  011_struct_compound.no  011_struct_return_2.no  012_nested_struct_compound.no  012_struct_return_3.no  013_constant_struct_compound.no  013_if_1.no  014_if_2.no  014_pointers.no  015_if_3.no  015_struct_pointers.no  016_foreign_functions.no  016_while.no  017_trunc.no  017_while.no  018_arithmetic_assignment.no  018_sext.no  019_break_while_for.no  019_zext.no  020_continue_while_for.no  020_pointer_math.no  (+44 more)
src/tests/hash_table/: hash_table.cpp  meson.build  test_hash_table.cpp
src/tests/mem/: alignment.cpp  meson.build  test_alignment.cpp  test_freelist.cpp
src/tests/parser/: meson.build  parse.cpp
subprojects/: .gitignore  dyncall.wrap
subprojects/packagefiles/dyncall/: build_dyncall.bat  meson.build
test/: another.no  test.no
tests/: arrays.no  build.no  escape_bs.no  meson.build  test.no
tests/mem/: alignment.cpp
